crates/overdrive-core/tests/compile_fail/observation_write_rejects_intent.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/observation_write_rejects_intent.rs:25:25
  |
 25 |     let _ = store.write(spec).await;
    |                   ----- ^^^^ expected `ObservationRow`, found `JobSpec`
    |                   |
    |                   arguments to this method are incorrect
    |
note: method defined here
   --> src/traits/observation_store.rs
    |
    |     async fn write(&self, row: ObservationRow) -> Result<(), ObservationStoreError>;
    |              ^^^^^
